# lomaya_baryery_backend

./: .env  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.local.yaml  docker-compose.prod.yaml  docker-compose.stage.yaml  docker-compose.test.yaml  docker-compose.yaml  generate_fake_data.py  healthcheck.py  healthcheck.sh  pyproject.toml  requirements.txt  run.py  run_bot.py  run_bot_webhook.py  setup.cfg  tasks.json
.github/workflows/: check_migrations.yml  codestyle.yml  deploy.yaml  deploy_prod.yaml  deploy_stage.yaml  deploy_test.yaml  healthcheck.yaml  restore.yaml  test.yaml  test_cd.yaml  test_deploy_stage.yaml
data_factory/: README.md  factories.py  main.py  requirements.txt
fail2ban/: jail.local
migrations/: env.py
migrations/versions/: 1776c5d1b9f6_init.py  2022-09-17_21:16:34_e2e44e3ca3cd_init.py  2022-09-17_c7739e329c3f_init.py  2022-09-18_07:27:34_init.py  2022-09-20_12:33:13_init.py  6f9f7b9c24c3_init.py  9a3fc82a7182_init.py  b466a8ba905d_init.py
nginx/: default.conf  default.prod.conf  nginx.local.conf
src/: application.py  main.py  pre_commit_test.py  run.py
src/api/: error_templates.py  main_router.py  routers.py  services.py
src/api/request_models/: administrator.py  administrator_invitation.py  paginate.py  photo.py  report.py  (+8 more)
src/bot/: api_services.py  bot.py  bot_persistence_file  error_handler.py  handlers.py  jobs.py  main.py  services.py  ui.py  views.py
src/core/: email.py  exception_handlers.py  exceptions.py  settings.py  utils.py
src/excel_generator/: __init__.py  analytic_report_director.py  base.py  base_analytic_report_settings.py  builder.py  main.py  shift_builder.py  task_builder.py  tasks_excel_generator.py  test_excel_generator.py  user_builder.py
src/html/: registration.html
src/nginx/: default.conf
src/routers/: __init__.py  user_tasks.py
src/schemas/: registration.py  user.py
src/server/: main.py
src/static/: registration.html  report_template.xltx
(+197 files in other folders)
