[tool.poetry]
name = "lomaya_baryery_backend"
version = "0.1.0"
description = "Lomaya Baryery tg_bot backend"
authors = ["Yandex Practicum Team backend_5+"]


[tool.poetry.dependencies]
environs = "~9.5.0"
python-telegram-bot = {extras = ["job-queue"], version = "^20.0"}
asyncpg = "0.24.0"
uvicorn = "~0.18.3"
fastapi = "~0.89.0"
alembic = "~1.7.1"
python = "^3.10"
pre-commit = "~2.20.0"
phonenumbers = "~8.12.55"
fastapi-restful = "^0.4.3"
aiohttp = ">=3.8.3"
aiolimiter = "1.0.0"
pytz = "^2022.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
email-validator = "^1.3.0"
python-multipart = "^0.0.5"
pydantic = {extras = ["email"], version = "^1.10.4"}
fastapi-mail = "^1.2.4"
openpyxl = "^3.0.10"

[tool.black]
skip-string-normalization = true

[tool.poetry.group.dev.dependencies]
click = "^8.1.3"
factory-boy = "^3.2.1"
psycopg2-binary = "^2.9.3"
